2009-10-26  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/addons.c, src/bookmarklist.c, src/bookmarklist.h:
   Add an 'activate' keybinding.


2009-10-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/Makefile.am, src/addons.c, src/bookmarklist.c,
   src/bookmarklist.h:
   Add a simple bookmark list to the sidebar.


2009-10-14  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/ao_doclist.c, src/addons.c:
   Fix switching to an untitled document with the tool button.


2009-10-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/ao_doclist.c, src/addons.c:
   Use ui_menu_add_document_items().


2009-07-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/tasks.c:
   Avoid using GHashTable functions from newer GLib versions to fix
   compilation with GLib 2.8.


2009-07-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/ao_systray.c:
   Attempt to fix crashes when quitting Geany from the system tray
   icon.


2009-07-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/addons.c, src/ao_doclist.c, src/ao_openuri.c, src/ao_systray.c,
   src/tasks.c:
   Use single header includes.


2009-06-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/ao_doclist.c:
   Fix a memory leak.
 * src/ao_doclist.c:
   Fix a typo. Fix label for new, untitled files in the document list
   menu.
   Show current document in bold in in the document list menu.


2009-06-12  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/ao_systray.c:
   Remove unnecessary casts.
 * src/ao_systray.c:
   Fix build for GTK 2.8.


2009-05-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * configure.in:
   Post-release version bump.
 * NEWS, README:
   Update for 0.2.
 * configure.in, po/addons.pot, po/geanyaddons.pot:
   Prefix the gettext package with "geany" to avoid possible naming
   conflicts.


2009-05-02  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
