@@ -1,3 +1,9 @@
+2009-11-01  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/addons.c:
+   Fix setting up keybindings.
+
+
 2009-10-26  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/addons.c, src/bookmarklist.c, src/bookmarklist.h:
